# wheels_of_hope

./: .dockerignore  .gitignore  Dockerfile  build.sh  docker-compose.yml  manage.py  pyproject.toml  render.yaml  requirements.txt
core/: models.py  serializers.py  urls.py  views.py
core/templates/core/: landing.html
docker/: entrypoint.sh
woh/: asgi.py  settings.py  urls.py  wsgi.py
